// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visualization Flyout Component renders add visualization Flyout 1`] = `
<div>
  Array [
    "",
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div
              aria-labelledby="addVisualizationFlyout"
              class="euiFlyout euiFlyout--medium euiFlyout--paddingLarge observability-flyout"
              role="dialog"
              tabindex="-1"
            >
              <button
                aria-label="Close this dialog"
                class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside"
                data-test-subj="euiFlyoutCloseButton"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
              <div
                class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
              >
                <h2
                  class="euiTitle euiTitle--medium"
                  id="addVisualizationFlyout"
                >
                  Select existing visualization
                </h2>
              </div>
              <div
                class="euiFlyoutBody"
              >
                <div
                  class="euiFlyoutBody__overflow euiFlyoutBody__overflow--hasBanner"
                  tabindex="0"
                >
                  <div
                    class="euiFlyoutBody__banner"
                  >
                    <div
                      class="euiCallOut euiCallOut--primary"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        <div
                          class="euiTextColor euiTextColor--default"
                        >
                          <p>
                            No saved visualizations found!
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlyoutBody__overflowContent"
                  >
                    <div>
                      Please use the "create new visualization" option in add visualization menu.
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlyoutFooter"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary"
                      data-test-subj="closeFlyoutButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Cancel
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="addFlyoutButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Add
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      }
    >
      Array [
        Array [
          <div
            data-focus-guard={true}
            key="guard-first"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />,
          "",
          <div
            data-focus-lock-disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onScrollCapture={[Function]}
            onTouchMoveCapture={[Function]}
            onTouchStart={[Function]}
            onWheelCapture={[Function]}
          >
            <div
              aria-labelledby="addVisualizationFlyout"
              className="euiFlyout euiFlyout--medium euiFlyout--paddingLarge observability-flyout"
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="dialog"
              tabIndex={-1}
            >
              <button
                aria-label="Close this dialog"
                className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside"
                data-test-subj="euiFlyoutCloseButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                />
              </button>
              <div
                className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
              >
                <h2
                  className="euiTitle euiTitle--medium"
                  id="addVisualizationFlyout"
                >
                  Select existing visualization
                </h2>
              </div>
              <div
                className="euiFlyoutBody"
              >
                <div
                  className="euiFlyoutBody__overflow euiFlyoutBody__overflow--hasBanner"
                  tabIndex={0}
                >
                  <div
                    className="euiFlyoutBody__banner"
                  >
                    <div
                      className="euiCallOut euiCallOut--primary"
                    >
                      <div
                        className="euiText euiText--small"
                      >
                        <div
                          className="euiTextColor euiTextColor--default"
                        >
                          <p>
                            No saved visualizations found!
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="euiFlyoutBody__overflowContent"
                  >
                    <div>
                      Please use the "create new visualization" option in add visualization menu.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="euiFlyoutFooter"
              >
                <div
                  className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      className="euiButton euiButton--primary"
                      data-test-subj="closeFlyoutButton"
                      disabled={false}
                      onClick={[MockFunction]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          Cancel
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      className="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="addFlyoutButton"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          Add
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>,
          <div
            data-focus-guard={true}
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />,
        ],
        "",
      ]
    </Portal>,
  ]
</div>
`;

exports[`Visualization Flyout Component renders replace visualization Flyout 1`] = `
<div>
  Array [
    "",
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
          <div
            data-focus-lock-disabled="false"
          >
            <div
              aria-labelledby="addVisualizationFlyout"
              class="euiFlyout euiFlyout--medium euiFlyout--paddingLarge observability-flyout"
              role="dialog"
              tabindex="-1"
            >
              <button
                aria-label="Close this dialog"
                class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside"
                data-test-subj="euiFlyoutCloseButton"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                  />
                </svg>
              </button>
              <div
                class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
              >
                <h2
                  class="euiTitle euiTitle--medium"
                  id="addVisualizationFlyout"
                >
                  Replace visualization
                </h2>
              </div>
              <div
                class="euiFlyoutBody"
              >
                <div
                  class="euiFlyoutBody__overflow euiFlyoutBody__overflow--hasBanner"
                  tabindex="0"
                >
                  <div
                    class="euiFlyoutBody__banner"
                  >
                    <div
                      class="euiCallOut euiCallOut--primary"
                    >
                      <div
                        class="euiText euiText--small"
                      >
                        <div
                          class="euiTextColor euiTextColor--default"
                        >
                          <p>
                            No saved visualizations found!
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="euiFlyoutBody__overflowContent"
                  >
                    <div>
                      Please use the "create new visualization" option in add visualization menu.
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFlyoutFooter"
              >
                <div
                  class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary"
                      data-test-subj="closeFlyoutButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Cancel
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      class="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="addFlyoutButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButton__content"
                      >
                        <span
                          class="euiButton__text"
                        >
                          Add
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            data-aria-hidden="true"
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="0"
          />
        </div>
      }
    >
      Array [
        Array [
          <div
            data-focus-guard={true}
            key="guard-first"
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />,
          "",
          <div
            data-focus-lock-disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onScrollCapture={[Function]}
            onTouchMoveCapture={[Function]}
            onTouchStart={[Function]}
            onWheelCapture={[Function]}
          >
            <div
              aria-labelledby="addVisualizationFlyout"
              className="euiFlyout euiFlyout--medium euiFlyout--paddingLarge observability-flyout"
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              role="dialog"
              tabIndex={-1}
            >
              <button
                aria-label="Close this dialog"
                className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside"
                data-test-subj="euiFlyoutCloseButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                  />
                </svg>
              </button>
              <div
                className="euiFlyoutHeader euiFlyoutHeader--hasBorder"
              >
                <h2
                  className="euiTitle euiTitle--medium"
                  id="addVisualizationFlyout"
                >
                  Replace visualization
                </h2>
              </div>
              <div
                className="euiFlyoutBody"
              >
                <div
                  className="euiFlyoutBody__overflow euiFlyoutBody__overflow--hasBanner"
                  tabIndex={0}
                >
                  <div
                    className="euiFlyoutBody__banner"
                  >
                    <div
                      className="euiCallOut euiCallOut--primary"
                    >
                      <div
                        className="euiText euiText--small"
                      >
                        <div
                          className="euiTextColor euiTextColor--default"
                        >
                          <p>
                            No saved visualizations found!
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="euiFlyoutBody__overflowContent"
                  >
                    <div>
                      Please use the "create new visualization" option in add visualization menu.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="euiFlyoutFooter"
              >
                <div
                  className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      className="euiButton euiButton--primary"
                      data-test-subj="closeFlyoutButton"
                      disabled={false}
                      onClick={[MockFunction]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          Cancel
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <button
                      className="euiButton euiButton--primary euiButton--fill"
                      data-test-subj="addFlyoutButton"
                      disabled={false}
                      onClick={[Function]}
                      style={
                        Object {
                          "minWidth": undefined,
                        }
                      }
                      type="button"
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          Add
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>,
          <div
            data-focus-guard={true}
            style={
              Object {
                "height": "0px",
                "left": "1px",
                "overflow": "hidden",
                "padding": 0,
                "position": "fixed",
                "top": "1px",
                "width": "1px",
              }
            }
            tabIndex={0}
          />,
        ],
        "",
      ]
    </Portal>,
  ]
</div>
`;
